--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap%27');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300&family=Roboto:wght@100;300;400;500&display=swap');
 
 *{
     margin: 0px;
     padding: 0px;
     text-decoration: none;
 }
+
+.bg-01{
+    background: rgb(224, 224, 224);
+}
+
+.m-1{margin: 10px !important;}
+.m-2{margin: 20px !important;}
+.m-3{margin: 30px !important;}
+.mt-1{margin-top: 10px !important;}
+.mt-2{margin-top: 20px !important;}
+.mt-3{margin-top: 30px !important;}
+.mb-1{margin-bottom: 10px !important;}
+.mb-2{margin-bottom: 20px !important;}
+.mb-3{margin-bottom: 30px !important;}
+.ml-1{margin-left: 10px !important;}
+.ml-2{margin-left: 20px !important;}
+.ml-3{margin-left: 30px !important;}
+.mr-1{margin-right: 10px !important;}
+.mr-2{margin-right: 20px !important;}
+.mr-3{margin-right: 30px !important;}
+
+.p-1{padding: 10px !important;}
+.p-2{padding: 20px !important;}
+.p-3{padding: 30px !important;}
+.pt-1{padding-top: 10px !important;}
+.pt-2{padding-top: 20px !important;}
+.pt-3{padding-top: 30px !important;}
+.pb-1{padding-bottom: 10px !important;}
+.pb-2{padding-bottom: 20px !important;}
+.pb-3{padding-bottom: 30px !important;}
+.pl-1{padding-left: 10px !important;}
+.pl-2{padding-left: 20px !important;}
+.pl-3{padding-left: 30px !important;}
+.pr-1{padding-right: 10px !important;}
+.pr-2{padding-right: 20px !important;}
+.pr-3{padding-right: 30px !important;}
 
 body, html{
     width:100%;
@@ -13,17 +50,17 @@ body, html{
 
 header{
     width: 100%;
-    min-height: 500px;
+    min-height: 10px;
     position: relative;
     background: rgb(224, 224, 224);
+    box-shadow: 0px 5px 15px #ccc;
 }
 
 .container{
     width: 1200px;
-    height: 450px;
+    min-height: 10px;
     position: relative;
     margin: 0px auto;
-    background-color: rgb(215, 215, 215);
 }
 
 nav{
@@ -65,24 +102,24 @@ nav{
 }
 
 .bar-1{
-    width: 70%;
+    width: 60%;
     height: 4px;
     background-color: #444;
     border-radius: 10px;
-    margin-top: 14.5px;
+    margin-top: 16.5px;
 }
 
 .bar-2{
-    width: 50%;
+    width: 40%;
     height: 4px;
     background-color: #444;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
     border-radius: 10px;
 }
 
 .bar-3{
-    width: 25%;
+    width: 20%;
     height: 4px;
     background-color: #444;
     border-radius: 10px;
@@ -109,4 +146,138 @@ nav{
 
 .box_auth :nth-child(1){
     margin-right: 20px;
+}
+
+.box-banner{
+    width: 100%;
+    height: 600px;
+    display: flex;
+}
+
+.resumo{
+    width:40%;
+    height:100%;
+    padding: 30px;
+    box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.resumo h1{
+    margin-bottom: 10px;
+    color: #555;
+}
+
+.resumo p{
+    color: #555;
+}
+
+.resumo .btn-banner{
+    width: 40%;
+    padding: 10px 20px;
+    margin-top: 20px;
+    background-color: transparent;
+    border: 2px solid #555;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.2s;
+    color: #555;
+}
+
+.btn-banner:hover{
+    background-color: #555;
+    color: white;
+}
+
+.img-produto-banner{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-produto-banner img{
+    width: 70%;
+    margin-top: 120px;
+}
+
+.row{
+    width: 100%;
+    min-height: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.coluna{
+    width: 33.333%;
+    min-height: 10px;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+.card-produto{
+    width: 300px;
+    min-height: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.card-produto img{
+    width: 60%;
+}
+
+.card-produto p{
+    width: 100%;    
+}
+
+.box-price{
+    width: 100%;
+    min-height:10px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.classificacao{
+    color: darkgoldenrod;
+}
+
+.price{
+    font-weight: 600;
+}
+
+.buttons{
+    width: 100%;
+    min-height:10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.buttons button{
+    width: 40%;
+    padding: 5px 20px;
+    box-sizing: border-box;
+    background-color: transparent;
+    border: 2px solid #555;
+    border-radius: 3px;
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+.buttons button:hover{
+    background-color: #555;
+    color: white;
+}
+
+main{
+    padding-bottom: 300px;
 }
