--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,18 @@
     background: rgb(224, 224, 224);
 }
 
+.bg-02{
+    background-color:darkkhaki;
+}
+
+
 .m-1{margin: 10px !important;}
 .m-2{margin: 20px !important;}
 .m-3{margin: 30px !important;}
 .mt-1{margin-top: 10px !important;}
 .mt-2{margin-top: 20px !important;}
 .mt-3{margin-top: 30px !important;}
+.mb-03{margin-bottom: 3px !important;}
 .mb-1{margin-bottom: 10px !important;}
 .mb-2{margin-bottom: 20px !important;}
 .mb-3{margin-bottom: 30px !important;}
@@ -144,8 +150,28 @@ nav{
     color: #444;
 }
 
+.box_auth p i:after{    
+    content: "3";    
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    color: #fff;
+    background-color: darkred;
+    font-size: 10px;    
+    border-radius: 100%;
+    text-align: center;
+    line-height: 15px;
+    font-family: 'Play', sans-serif;
+    margin-top: -10px;
+    margin-left: -5px;
+}
+
 .box_auth :nth-child(1){
     margin-right: 20px;
+}
+
+.box_auth :nth-child(3){
+    padding-right: 0px;
 }
 
 .box-banner{
@@ -218,7 +244,6 @@ nav{
     display: flex;
     justify-content: center;
     box-sizing: border-box;
-    margin-bottom: 20px;
 }
 
 .card-produto{
@@ -226,13 +251,31 @@ nav{
     min-height: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     font-family: 'Roboto Condensed', sans-serif;
+    position: relative;
+}
+
+.box-top-produto{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-produto .box-top-produto img{
+    width: 60%;
+    margin-bottom: 20px;
 }
 
 .card-produto img{
     width: 60%;
+    margin-bottom: 20px;
+}
+
+.box-bottom-produto{
+    width: 100%;
 }
 
 .card-produto p{
@@ -254,6 +297,8 @@ nav{
 .price{
     font-weight: 600;
 }
+
+
 
 .buttons{
     width: 100%;
@@ -279,5 +324,86 @@ nav{
 }
 
 main{
-    padding-bottom: 300px;
+    padding-bottom: 100px;
+}
+
+footer{
+    width: 100%;
+    min-height: 10px;
+    display:flex;    
+}
+
+footer .row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+footer nav ul{
+    width: 100%;
+    display: flex;  
+    justify-content: center;  
+}
+
+footer nav ul li{
+    padding: 10px 20px;
+    text-decoration: none;
+    list-style-type: none;
+    color: #555;
+}
+
+footer nav ul li a{
+    color: #555;
+    text-decoration: none;
+}
+
+.redes{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.redes i{
+    padding: 5px 5px;
+    font-size: 20px;
+    color: #555;
+}
+
+.card-favoritar{
+    width: 100%;
+    min-height: 10px;
+    position: relative;
+}
+
+.container-favorito{
+    width: 100%;
+    min-height: 10px;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.new{
+    background-color: royalblue;
+    color: white;
+    font-size: 10px;
+    padding: 2px 7px;
+    font-family: 'Roboto Condensed', sans-serif;
+    text-align: center;
+}
+
+.desc{
+    background-color: #333;
+    color: #fff;
+    font-size: 10px;
+    padding: 2px 7px;
+    font-family: 'Roboto Condensed', sans-serif;
+    text-align: center;
+}
+
+.ico-favoritar{
+    color: royalblue;
 }
